--- a/audio_video.html
+++ b/audio_video.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>audio video</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="audio_video.html">audio and video</a></li>
+                <li><a href="form.html">Form</a></li>
+            </ul>
+        </nav>
+    </header>
     <h3>Audio and Video</h3>
     <audio controls src="assets/media/audio.mp3"></audio>
     <video style="width: 300px;" controls src="assets/media/video.mp4"></video>
