--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahim er ma ar pitha ghor</title>
+    <link rel="stylesheet" href="styles/nav.css">
     <style>
         label{
             display:block;
@@ -13,7 +14,12 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <ul>
+                <li><a href="audio_video.html">audio and video</a></li>
+                <li><a href="form.html">Form</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
