--- a/table.html
+++ b/table.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Table </title>
+    <link rel="stylesheet" href="styles/nav.css">
 
     <style>
         table{
@@ -16,6 +17,15 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li class="link"><a href="audio_video.html">audio and video</a></li>
+                <li class="link"><a href="form.html">Form</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>HTML Table</h1>
     <table>
         <caption>Employee Salary Table</caption>
