--- a/table.html
+++ b/table.html
@@ -19,9 +19,9 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li class="link"><a href="audio_video.html">audio and video</a></li>
-                <li class="link"><a href="form.html">Form</a></li>
+            <ul >
+                <li><a href="audio_video.html">audio and video</a></li>
+                <li><a href="form.html">Form</a></li>
             </ul>
         </nav>
     </header>
